--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ compare_MutvsWTfractions/WT_Mut_fractionPlotSWIP.ipynb
 .Rproj.user
 analysis/
 compare_MutvsWTfractions
+geneontologies/
+tables
+.R*
